Fix add-cover and manage-covers
Changes:
* Pages with id "form" no longer have a header in v2
or any banners
* No margin at the top of pages without a header
* Upgrade some $.ready calls to us the window.q
* Remove some jCarousel code which wasnt functioning before
the migration to v2 and continues not to function
* "three ways" => "two ways". presumably, we used to allow
selection of covers from a carousel, but it doesnt look like
that was working (at least for me locally) prior to making the
page v2
* Remove the float on the manage covers element - it was breaking
compatability with jquery ui. This forces it onto a new line.

Fixes: #1329
Fixes: #1199

--- a/static/css/v2.less
+++ b/static/css/v2.less
@@ -4,8 +4,13 @@
   max-width: 960px;
   width: 100%;
   margin: 0 auto;
-  margin-top: 20px;
   background-color: @white;
   border-radius: 5px;
   border: 1px solid @dark-beige;
+}
+// For pages without a header we don't want a margin.
+// This might be better placed in the header component in future
+// but is kept here for backwards compatibility with v1 pages
+header + #test-body-mobile {
+  margin-top: 20px;
 }
